# readback

./: .env.example  AGENTS.md  README.md  TODO.md  pyproject.toml
readback/: chat.py  clean.py  cli.py  config.py  extract.py  fetch.py  rewrite.py  server.py  speak.py  storage.py
readback/web/: app.js  index.html  style.css
