[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readback"
version = "0.1.0"
description = "PDF to podcast — converts study material into narrator-style audio"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "elevenlabs>=1.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "openai>=1.30",
    "httpx>=0.27",
]

[project.scripts]
readback = "readback.cli:main"
readback-web = "readback.server:main"
